--- a/src/index.css
+++ b/src/index.css
@@ -27,7 +27,7 @@ body {
   min-height: 100%;
   background-color: #f4f1ee;
   color: #4a4e69;
-	overflow: hidden;
+	/* overflow: hidden; */
   /* overflow-y: auto; ✅ Allows vertical scrolling */
 }
 
